--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "react-router-dom": "^5.3.0"
   },
-  "homepage": "https://vpore.github.io/MyPortfolio/home"
+  "homepage": "https://vpore.github.io/MyPortfolio/"
 }
